tests/examples/snapshots/fail/relations.fly.cvc5.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/relations.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: assertion failure
   ┌─ tests/examples/fail/relations.fly:13:1
   │
13 │ assert forall a:A, b:A. q(a, b) -> a = b
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = counter example:
     p(@A_0) = true
     p(@A_1) = false
     q(@A_0,@A_0) = true
     q(@A_0,@A_1) = true
     q(@A_1,@A_0) = true
     q(@A_1,@A_1) = true
     a0 = @A_0


