tests/examples/snapshots/fail/sort_checking_basic.fly.cvc4.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sort_checking_basic.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
thread 'main' panicked at 'error in solver: UnexpectedClose', src/verify/module.rs:36:49
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

