tests/examples/snapshots/fail/sort_checking_basic.fly.z3.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sort_checking_basic.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
thread 'main' panicked at 'unexpected check-sat response (error "line 7 column 59: Sorts s and Bool are incompatible")
sat', src/smtlib/proc.rs:314:9
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

